--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+# Terraform
 *.tfstate
+*.tfstate.*
 .terraform/
-.tfvars
+*.tfvars
+*.tfvars.json
+crash.log
+crash.*.log
+*.tfplan
+*.tfplan.*
+.terraformrc
+terraform.rc
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/settings.json
+.idea/
+*.swp
+*.swo
+
+# Local environment files
+.env
+.env.local
+.env.*.local
+
+# Note: .terraform.lock.hcl should be included in the repo
